--- a/css/demo003.css
+++ b/css/demo003.css
@@ -1207,8 +1207,8 @@ margin-top: 0px;
     cursor:pointer;
     width:50px;
     height:50px;
-    background-color:#262a31;
-    border-color: #262a31;
+    background-color:#c69e40;
+    border-color: #c69e40;
     text-indent:-9999px;
     display:none;
     -webkit-border-radius:60px;
@@ -1228,7 +1228,7 @@ margin-top: 0px;
     border-bottom-color:#ffffff;
 }
 #scroll:hover {
-    background-color:#505050;
+    background-color:#262a31;
     opacity:1;filter:"alpha(opacity=100)";
     -ms-filter:"alpha(opacity=100)";
 }
